--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,5 +16,5 @@ services:
       driver: awslogs
       options:
         awslogs-group: /ecs/gatling-runner
-        awslogs-region: eu-west-1
+        awslogs-region: us-east-2
         awslogs-stream-prefix: gatling-runner
