--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
   gatling-runner:
-    image: <id>.dkr.ecr.eu-west-1.amazonaws.com/gatling-runner:latest
+    image: 848625190772.dkr.ecr.us-east-2.amazonaws.com/gatling-runner:latest
     command: -r <s3 bucket>
     environment:
       - GATLING_NR_USERS=1
