--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '2'
 services:
   gatling-runner:
-    image: 848625190772.dkr.ecr.us-east-2.amazonaws.com/gatling-runner:latest
-    command: -r <s3 bucket>
+    image: 848625190772.dkr.ecr.us-east-2.amazonaws.com/distr-docke-flxqu317r5k1:latest
+    command: -r org.izolotov.testing
     environment:
       - GATLING_NR_USERS=1
       - GATLING_MAX_DURATION=1
@@ -15,6 +15,7 @@ services:
     logging:
       driver: awslogs
       options:
+        awslogs-create-group: true
         awslogs-group: /ecs/gatling-runner
         awslogs-region: us-east-2
         awslogs-stream-prefix: gatling-runner
