--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,14 @@
                 <version>1.1.0</version>
                 <scope>test</scope>
             </dependency>
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava-primitives</artifactId>
+                <version>r03</version>
+                <scope>test</scope>
+            </dependency>
+
+
         </dependencies>
     </dependencyManagement>
 
@@ -138,6 +146,11 @@
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-clients</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava-primitives</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
