--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '2'
 services:
   gatling-runner:
+    # TODO should be parametrized
     image: 848625190772.dkr.ecr.us-east-2.amazonaws.com/distr-docke-flxqu317r5k1:latest
     command: -r org.izolotov.testing
     environment:
@@ -17,5 +18,6 @@ services:
       options:
         awslogs-create-group: true
         awslogs-group: /ecs/gatling-runner
+        # TODO should be parametrized
         awslogs-region: us-east-2
         awslogs-stream-prefix: gatling-runner
