--- a/producer/deployment.yaml
+++ b/producer/deployment.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: producer
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: producer
@@ -17,8 +17,8 @@ spec:
     spec:
       containers:
         - name: producer
-          image: "artifactory.acoustic.co/journey-analytics-docker-virtual/staging/ja-kafka-load-test-producer:1.0.4"
-          args: []
+          image: "artifactory.acoustic.co/journey-analytics-docker-virtual/staging/ja-kafka-load-test-producer:1.0.6"
+          args: ["300", "10", "perf.test"]
           imagePullPolicy: "Always"
       imagePullSecrets:
         - name: artifactory
